@@ -1,24 +1,19 @@
 package com.positivity.mcp.internal.service;
 
-import static dev.langchain4j.store.embedding.filter.MetadataFilterBuilder.metadataKey;
-
 import com.positivity.mcp.internal.domain.RagScope;
-import dev.langchain4j.data.document.Document;
-import dev.langchain4j.data.document.DocumentSplitter;
-import dev.langchain4j.data.document.Metadata;
-import dev.langchain4j.data.document.splitter.DocumentSplitters;
-import dev.langchain4j.data.embedding.Embedding;
-import dev.langchain4j.data.segment.TextSegment;
-import dev.langchain4j.model.embedding.EmbeddingModel;
-import dev.langchain4j.store.embedding.filter.logical.And;
-import dev.langchain4j.store.embedding.pgvector.PgVectorEmbeddingStore;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.ai.document.Document;
+import org.springframework.ai.embedding.EmbeddingModel;
+import org.springframework.ai.vectorstore.filter.FilterExpressionBuilder;
+import org.springframework.ai.vectorstore.pgvector.PgVectorStore;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
@@ -29,26 +24,50 @@ public class DocumentEmbeddingIngestor {
 
     private static final String DOCUMENT_ID = "document_id";
     private static final String RAG_SCOPE = "rag_scope";
+    private static final double MAX_OVERLAP_RATIO = 0.5;
+    private static final int DEFAULT_MAX_CHUNKS_PER_DOCUMENT = 2_000;
 
     private static final Logger LOGGER = LoggerFactory.getLogger(DocumentEmbeddingIngestor.class);
 
-    private final PgVectorEmbeddingStore embeddingStore;
+    private final PgVectorStore embeddingStore;
     private final EmbeddingModel embeddingModel;
-    private final DocumentSplitter documentSplitter;
     private final boolean chunkingEnabled;
+    private final int maxSegmentSize;
+    private final int maxOverlapSize;
+    private final int segmentStepSize;
+    private final int maxChunksPerDocument;
 
+    @Autowired
     public DocumentEmbeddingIngestor(
-            @NonNull PgVectorEmbeddingStore embeddingStore,
+            @NonNull PgVectorStore embeddingStore,
             @NonNull EmbeddingModel embeddingModel,
             @Value("${mcp.rag.chunking.enabled:true}") boolean chunkingEnabled,
             @Value("${mcp.rag.chunking.max-segment-size:2000}") int maxSegmentSize,
-            @Value("${mcp.rag.chunking.max-overlap-size:200}") int maxOverlapSize) {
+            @Value("${mcp.rag.chunking.max-overlap-size:200}") int maxOverlapSize,
+            @Value("${mcp.rag.chunking.max-chunks-per-document:2000}") int maxChunksPerDocument) {
         this.embeddingStore = embeddingStore;
         this.embeddingModel = embeddingModel;
         this.chunkingEnabled = chunkingEnabled;
-        int sanitizedMaxSegmentSize = Math.max(1, maxSegmentSize);
-        int sanitizedMaxOverlapSize = Math.clamp(maxOverlapSize, 0, sanitizedMaxSegmentSize - 1);
-        this.documentSplitter = DocumentSplitters.recursive(sanitizedMaxSegmentSize, sanitizedMaxOverlapSize);
+        this.maxSegmentSize = Math.max(1, maxSegmentSize);
+        int overlapCap = Math.max(0, Math.min(this.maxSegmentSize - 1, (int) (this.maxSegmentSize * MAX_OVERLAP_RATIO)));
+        this.maxOverlapSize = Math.clamp(maxOverlapSize, 0, overlapCap);
+        this.segmentStepSize = Math.max(1, this.maxSegmentSize - this.maxOverlapSize);
+        this.maxChunksPerDocument = Math.max(1, maxChunksPerDocument);
+    }
+
+    public DocumentEmbeddingIngestor(
+            @NonNull PgVectorStore embeddingStore,
+            @NonNull EmbeddingModel embeddingModel,
+            boolean chunkingEnabled,
+            int maxSegmentSize,
+            int maxOverlapSize) {
+        this(
+                embeddingStore,
+                embeddingModel,
+                chunkingEnabled,
+                maxSegmentSize,
+                maxOverlapSize,
+                DEFAULT_MAX_CHUNKS_PER_DOCUMENT);
     }
 
     public int ingestDocument(@NonNull String content, @NonNull Map<String, Object> metadata) {
@@ -61,9 +80,9 @@ public class DocumentEmbeddingIngestor {
                 : UUID.randomUUID().toString();
 
         try {
-            List<TextSegment> segments = segments(content, normalizedMetadata, documentId);
+            List<Document> segments = segments(content, normalizedMetadata, documentId);
             long embeddingStartNanos = System.nanoTime();
-            List<Embedding> embeddings = embeddingModel.embedAll(segments).content();
+            List<float[]> embeddings = embeddingModel.embed(segments.stream().map(Document::getText).toList());
             LOGGER.info(
                     "Embedded RAG document {} with {} segments in {} ms",
                     documentId,
@@ -77,11 +96,14 @@ public class DocumentEmbeddingIngestor {
 
             long storeStartNanos = System.nanoTime();
             if (replaceExisting) {
-                embeddingStore.removeAll(new And(
-                        metadataKey(DOCUMENT_ID).isEqualTo(documentId),
-                        metadataKey(RAG_SCOPE).isEqualTo((String) normalizedMetadata.get(RAG_SCOPE))));
+                var filter = new FilterExpressionBuilder()
+                        .and(
+                                new FilterExpressionBuilder().eq(DOCUMENT_ID, documentId),
+                                new FilterExpressionBuilder().eq(RAG_SCOPE, normalizedMetadata.get(RAG_SCOPE)))
+                        .build();
+                embeddingStore.delete(filter);
             }
-            embeddingStore.addAll(embeddings, segments);
+            embeddingStore.add(segments);
             LOGGER.info(
                     "Stored RAG document {} with {} segments in {} ms",
                     documentId,
@@ -117,23 +139,46 @@ public class DocumentEmbeddingIngestor {
         }
     }
 
-    private @NonNull List<TextSegment> segments(
+    private @NonNull List<Document> segments(
             @NonNull String content, @NonNull Map<String, Object> metadata, @NonNull String documentId) {
-        Metadata documentMetadata = Metadata.from(metadata).put(DOCUMENT_ID, documentId);
-        Document document = Document.from(content, documentMetadata);
-        List<TextSegment> rawSegments =
-                chunkingEnabled ? documentSplitter.split(document) : List.of(document.toTextSegment());
-        List<TextSegment> enrichedSegments = new ArrayList<>(rawSegments.size());
+        Map<String, Object> baseMetadata = new HashMap<>(metadata);
+        baseMetadata.put(DOCUMENT_ID, documentId);
+
+        List<String> rawSegments = chunkingEnabled ? split(content) : List.of(content);
+        List<Document> enrichedSegments = new ArrayList<>(rawSegments.size());
         for (int index = 0; index < rawSegments.size(); index++) {
-            TextSegment segment = rawSegments.get(index);
-            Metadata segmentMetadata = segment.metadata()
-                    .copy()
-                    .put(DOCUMENT_ID, documentId)
-                    .put("chunk_index", index)
-                    .put("chunk_count", rawSegments.size());
-            enrichedSegments.add(TextSegment.from(segment.text(), segmentMetadata));
+            Map<String, Object> segmentMetadata = new HashMap<>(baseMetadata);
+            segmentMetadata.put("chunk_index", index);
+            segmentMetadata.put("chunk_count", rawSegments.size());
+            enrichedSegments.add(new Document(rawSegments.get(index), segmentMetadata));
         }
         return enrichedSegments;
+    }
+
+    private @NonNull List<String> split(@NonNull String content) {
+        List<String> segments = new ArrayList<>();
+        int start = 0;
+        int length = content.length();
+        while (start < length) {
+            if (segments.size() >= maxChunksPerDocument) {
+                throw new IllegalArgumentException(
+                        "Document exceeds configured chunk limit: maxChunks=%d, segmentSize=%d, overlap=%d, contentLength=%d"
+                                .formatted(maxChunksPerDocument, maxSegmentSize, maxOverlapSize, length));
+            }
+            int end = Math.min(length, start + maxSegmentSize);
+            String segment = content.substring(start, end).trim();
+            if (!segment.isEmpty()) {
+                segments.add(segment);
+            }
+            if (end >= length) {
+                break;
+            }
+            start = start + segmentStepSize;
+        }
+        if (segments.isEmpty()) {
+            segments.add(content);
+        }
+        return segments;
     }
 
     private static long elapsedMs(long startNanos) {
